Création de ma partie : difficulté facile --> création de : compteur, stop, mes trois tableaux (tabStockerSrc,tabStockerVariable,tabStockerDos), fonction : quand je clique dans mon btn facile, toutes les cartes de dos sont affichées, à chaque fois que je vais cliquer sur l'une des cartes mtn visibles, il est à l'état stop donc je mets son résultat en mettant son compteur ++ puis je lui donne une limite de 2 et je fais ensuite une comparaison des deux cartes si elles sont les Ensuite, je réinitialise tout : Je remets le tableau à 0 et le compteur à 0. Je rechange les valeurs stop pour qui refais le processus.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,25 @@ img{
 img[src$="img1.difficulterFacile.jpeg"] {
 } */
 
+
+/* générale */
+.none{
+    display: none;
+}
+.flex{
+    display: flex;
+}
+.block{
+    display: block;
+}
+
+
+
+/*                 
+                    if (tabStockerVariable[0].style.border=="red 2px solid" && tabStockerVariable[1].style.border=="red 2px solid") {
+                        tabStockerDos[0].style.display="flex"
+                        tabStockerDos[1].style.display="flex"
+                        tabStockerVariable[0].style.display="none"
+                        tabStockerVariable[1].style.display="none"
+                        alert(`omg`)
+                    } */
